[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "markdownup"
version = "0.1.0"
description = "MarkdownファイルをUTF-8で配信し、HTMLに変換して表示するローカルHTTPサーバー"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "Jun_Shimoji" }]
dependencies = []

[project.optional-dependencies]
render = [
  "markdown>=3.4",
  "pygments>=2.15",
]

[project.scripts]
markdownup = "markdownup:main"

[tool.setuptools]
py-modules = ["markdownup"]













